RNA_boolean_get warning when saving a file for the first time #99301

Closed
opened 2022-06-30 15:19:17 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 6a2c42a0d5 (3.3 alpha)
Worked: 6a2c42a0d58e^ (3.3 alpha)

Short description of error
I get the following error when trying to save a file for the first time:
RNA_boolean_get: WM_OT_save_mainfile.copy not found.

Exact steps for others to reproduce the error
blender -b --python-expr "import bpy;bpy.ops.wm.save_mainfile(filepath='/tmp/untitled.blend')" | grep RNA_boolean_get

Note that it doesn't happen if I "Save File As", only if I " Save File".

**Blender Version** Broken: 6a2c42a0d58e (3.3 alpha) Worked: 6a2c42a0d58e^ (3.3 alpha) **Short description of error** I get the following error when trying to save a file for the first time: `RNA_boolean_get: WM_OT_save_mainfile.copy not found.` **Exact steps for others to reproduce the error** `blender -b --python-expr "import bpy;bpy.ops.wm.save_mainfile(filepath='/tmp/untitled.blend')" | grep RNA_boolean_get` Note that it doesn't happen if I "Save File As", only if I " Save File".
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton was assigned by Dalai Felinto 2022-06-30 15:20:10 +02:00
Author
Owner

Added subscriber: @Sergey
Removed subscriber: @dfelinto

Added subscriber: @Sergey Removed subscriber: @dfelinto

This issue was referenced by b683a37824

This issue was referenced by b683a37824aa2fb22efe22a1dbce667b8155698f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99301
No description provided.