Fix T99301: RNA_boolean_get warning when saving a file for the first time

Caused by [0], RNA_struct_property_is_set also functioned to check if
the property existed.

[0]: 6a2c42a0d58e0f36cca1cf4ca0c5c98ec3612f6f